--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.1.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -43,7 +41,13 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.3.0.CR1</version>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>5.3.23</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
